--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script> 
+    
 </head>
 <body>
-    <div id="map"></div>    
+    <script>
+        var imageBounds = [[0, 0], [9600, 9600]];
+        var imageSource = './atlas-1.png';
+    </script>
+    <div id="map"></div>        
 </body>
 </html>
