--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <script>
         var imageBounds = [[0, 0], [9600, 9600]];
-        var imageSource = './atlas-1.png';
+        var imageSource = './images/atlas-1.png';
     </script>
     <div id="map"></div>        
 </body>
