--- a/Cogmap2/index.html
+++ b/Cogmap2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Cogmap - Goon Hub</title>
+    <title>Cogmap2 - Goon Hub</title>
 
     <link rel="stylesheet" href="./style/style.css"/>
     <script src="./script/scripts.js" defer></script>
