--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Maphub</title>
+    <title>Maphub</title>
 
     <link rel="stylesheet" href="/Hub/style.css">
-    <script src="/Hub/script.js"></script>
+    <script src="/Hub/script.js" defer></script>
 </head>
 <body>
-    
+    <div id="main"></div>    
 </body>
 </html>
