--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maphub</title>
 
-    <link rel="stylesheet" href="/Hub/style.css">
-    <script src="/Hub/script.js" defer></script>
+    <link rel="stylesheet" href="./Hub/style.css">
+    <script src="./Hub/script.js" defer></script>
 </head>
 <body>
     <div id="main"></div>    
