--- a/Atlas/index.html
+++ b/Atlas/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Atlas - Goon Hub</title>
 
-    <link rel="stylesheet" href="./style/style.css"/>
-    <script src="./script/scripts.js" defer></script>
+    <link rel="stylesheet" href="../Files/style.css"/>
+    <script src="../Files/scripts.js" defer></script>
     <!--Leaflet-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
