Add pipnet to maps

--- a/Atlas/index.html
+++ b/Atlas/index.html
@@ -21,6 +21,7 @@
     <script>
         var imageBounds = [[0, 0], [9600, 9600]];
         var imageSource = './images/atlas-1.png';
+        var pipeSource = './images/atlas-pipe.png';
     </script>
     <div id="map"></div>        
 </body>
