--- a/Oshan/index.html
+++ b/Oshan/index.html
@@ -21,6 +21,7 @@
     <script>
         var imageBounds = [[0, 0], [9600, 9600]];
         var imageSource = './images/oshan-1.png';
+        var pipeSource = './images/oshan-pipe.png';
     </script>
     <div id="map"></div>        
 </body>
