--- a/Cogmap2/index.html
+++ b/Cogmap2/index.html
@@ -21,6 +21,7 @@
     <script>
         var imageBounds = [[0, 0], [9600, 9600]];
         var imageSource = './images/cogmap2-1.png';
+        var pipeSource = './images/cogmap2-pipe.png';
     </script>
     <div id="map"></div>        
 </body>
